working example showing full router bit

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     {{/each}}
   </script>
 
-  <script type="text/x-handlebars" data-template-name="posts">
+  <script type="text/x-handlebars" data-template-name="post">
     <h1>{{title}}</h1>
     <div class="body">
       {{body}}
