moved the index, app to be named basic-1 so that I can add more examples

--- a/basic-1.html
+++ b/basic-1.html
@@ -43,6 +43,6 @@
   <script src="js/thirdparty/handlebars-1.0.0.beta.6.js"></script>
   <script src="js/thirdparty/ember-1.0.pre.js"></script>
 
-  <script src="js/app.js"></script>
+  <script src="js/basic-1.js"></script>
 </body>
 </html>
