--- a/basic-1.html
+++ b/basic-1.html
@@ -40,7 +40,7 @@
 
   <!-- Now include all the extra scripts -->
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-  <script src="js/thirdparty/handlebars-1.0.0.beta.6.js"></script>
+  <script src="js/thirdparty/handlebars-1.0.rc.1.js"></script>
   <script src="js/thirdparty/ember-1.0.pre.js"></script>
 
   <script src="js/basic-1.js"></script>
